GUI-7660 fix dataflow icon alignment

--- a/assets/stylesheets/less/partials/dag.less
+++ b/assets/stylesheets/less/partials/dag.less
@@ -259,16 +259,17 @@ html.firefox, html.microsoft {
 }
 
 .dagTableIcon {
-    .size(@width: 24px, @height: 24px);
+    .size(@width: 25px, @height: 25px);
     position: relative !important;
-    left: 6px;
+    left: 5px;
     top: 7px;
     background-color: @color-white;
+    .rounded(3px);
 
     &.icv ~ .icon {
         color: @color-error-border;
     }
-    
+
 }
 
 .dagTable {
@@ -518,7 +519,7 @@ html.firefox, html.microsoft {
                     background: @color-bg-select-blue;
                     box-shadow: 0px 0px 8px 3px @color-dag-highlighted;
                 }
-                
+
                 .icon {
                     color: @color-white;
                 }
@@ -566,10 +567,10 @@ html.firefox, html.microsoft {
         }
 
         .icon {
-            .position(absolute, @top: 5px, @left: 3px);
-            font-size: 28px;
+            .position(absolute, @top: 7px, @left: 3px);
+            font-size: 26px;
             pointer-events: none; // to allow tooltip on tableElement
-            
+
         }
 
         .lockIcon {
